--- a/image-uploader/public/css/styles.css
+++ b/image-uploader/public/css/styles.css
@@ -38,20 +38,30 @@ input[type="file"] {
 .uploaded-img {
   margin-top: 30px;
   border-radius: 10px;
+  max-width: 100%;
 }
 
 .copy-link {
-  display:flex;
+  display: flex;
   line-height: 1rem;
   margin-top: 30px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
   border-radius: 8px;
 }
 
-.copy-link input[type=text] {
+.copy-link input[type="text"] {
   border: none transparent;
   outline: none;
   border-radius: 8px;
   margin-left: 2%;
   font-size: 0.7rem;
+  padding: 0 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.copy-link button {
+  padding: 7px 25px;
+  margin-left: auto;
 }
