--- a/image-uploader/public/css/styles.css
+++ b/image-uploader/public/css/styles.css
@@ -14,6 +14,14 @@
   border-radius: 10px;
 }
 
+.file-drag {
+  background-color: #cbe1ff;
+}
+
+.upload-box * {
+  pointer-events: none;
+}
+
 .instruction {
   font-size: 0.7rem;
   color: #bdbdbd;
