--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
   line-height: 3rem;
   text-align: center;
   font-family: "Poppins", sans-serif;
+  box-shadow: 0px 40px 100px rgba(0, 0, 0, 0.35);
 }
 
 .upload-box {
